LinearLayout +StartGapGrow +EndGapGrow Paragraph +CollapseSpaces LetterSpacing fixed Static +ToStringInvariant

--- a/StaticSharp/BasicComponents/Normalization.css
+++ b/StaticSharp/BasicComponents/Normalization.css
@@ -37,6 +37,7 @@ body {
 }
 
     body * {
+        letter-spacing: inherit;
         touch-action: inherit;
         display: block;
         overflow-x: visible;
